--- a/react-app/src/components/Meals/Meals.module.css
+++ b/react-app/src/components/Meals/Meals.module.css
@@ -1,7 +1,8 @@
 .Meals{
     position: absolute;
-    top: 0;
+    top: 120rem;
     bottom: 0;
     /* background-color: aqua; */
     overflow:auto;
+    padding-bottom: 120rem;
 }
